rnsc/test_data/integration/error/parser/type_hints/utf8/no_operand_recovers.rns
.class   @utf8 ; no operand provided
blabla ; <- should be still reported as an error